modificar datos de la empresa

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -75,6 +75,10 @@ body {
     font-weight: 300;
 }
 
+.nav-title strong {
+    font-weight: 700;
+}
+
 .nav-link {
     margin-left: auto;
     padding: 0;
