--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,33 +1,60 @@
 <section id="nosotros" class="container">
   <h2 class="subtitle text-center mt-70">Sobre Nosotros</h2>
   <p class="about-paragraph text-center">
-      Todo lo necesario y obligatorio de CSS, (Flexbox, Grid, Custom properties, Position, Animaciones, Box Model y más)
+    Somos DevXperts, un equipo apasionado por el desarrollo de soluciones
+    tecnológicas que transforman ideas en realidades digitales.
   </p>
   <div class="testimony">
-      <div class="testimony-container container">
-          <img src="./assets/img/leftarrow.svg" alt="" class="testimony-arrow" id="before"/>
-          
-          <section class="testimony-body testimony-body--show" data-id="1">
-              <div class="testimony-texts">
-                  <h2 class="subtitle">Mi nombre es Jordan Alexander, <span class="testimony-course">estudiante de CSS.</span></h2>
-                  <p class="testimony-review">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis quaerat eos ipsam itaque, corrupti reiciendis, possimus et, aspernatur iste excepturi fuga fugit nostrum accusamus veniam in debitis sit atque laboriosam!</p>
-              </div>
-              <figure class="testimony-picture">
-                  <img src="./assets/img/face3.jpg" alt="" class="testimony-img">
-              </figure>
-          </section>
+    <div class="testimony-container container">
+      <img
+        src="./assets/img/leftarrow.svg"
+        alt=""
+        class="testimony-arrow"
+        id="before"
+      />
 
-          <section class="testimony-body" data-id="2">
-              <div class="testimony-texts">
-                  <h2 class="subtitle">Mi nombre es Alejandra Perez, <span class="testimony-course">estuadiante de CSS.</span></h2>
-                  <p class="testimony-review">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis quaerat eos ipsam itaque, corrupti reiciendis, fuga fugit nostrum accusamus veniam in debitis sit atque laboriosam!</p>
-              </div>
-              <figure class="testimony-picture">
-                  <img src="./assets/img/face4.jpg" alt="" class="testimony-img">
-              </figure>
-          </section>
+      <section class="testimony-body testimony-body--show" data-id="1">
+        <div class="testimony-texts">
+          <h2 class="subtitle">
+            Soy Jordan Alexander,
+            <span class="testimony-course">Desarrollador Fullstack.</span>
+          </h2>
+          <p class="testimony-review">
+            Desarrollador Fullstack apasionado por crear soluciones tecnológicas
+            que marquen la diferencia. Con más de 5 años de experiencia en el
+            desarrollo de aplicaciones web y móviles, domina tecnologías como
+            JavaScript, Node.js, Angular y bases de datos SQL y NoSQL
+          </p>
+        </div>
+        <figure class="testimony-picture">
+          <img src="./assets/img/face3.jpg" alt="" class="testimony-img" />
+        </figure>
+      </section>
 
-          <img src="./assets/img/rightarrow.svg" alt="" class="testimony-arrow" id="next">
-      </div>
+      <section class="testimony-body" data-id="2">
+        <div class="testimony-texts">
+          <h2 class="subtitle">
+            Soy Juan Carlos,
+            <span class="testimony-course">Desarrollador Backend</span>
+          </h2>
+          <p class="testimony-review">
+            Experto en desarrollo Fullstack con una amplia trayectoria en
+            proyectos tecnológicos innovadores. Con una sólida base en
+            tecnologías como Python, Django, Flask y DevOps, es capaz de liderar
+            proyectos de principio a fin.
+          </p>
+        </div>
+        <figure class="testimony-picture">
+          <img src="./assets/img/face4.jpg" alt="" class="testimony-img" />
+        </figure>
+      </section>
+
+      <img
+        src="./assets/img/rightarrow.svg"
+        alt=""
+        class="testimony-arrow"
+        id="next"
+      />
+    </div>
   </div>
 </section>
