--- a/src/app/components/knowledge/knowledge.component.html
+++ b/src/app/components/knowledge/knowledge.component.html
@@ -1,13 +1,13 @@
 <section class="knowledge">
   <div class="knowledge-container container">
       <div class="knowledge-texts">
-          <h2 class="subtitle">Curso completo CSS3. ¡Domina CSS de una vez por todas!</h2>
-          <p class="knowledge-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolor velit explicabo, natus nisi sequi fuga numquam doloribus necessitatibus quis officiis vero excepturi. Molestias quae beatae omnis quos rerum alias!</p>
-          <a href="#" class="cta">Entra al curso</a>
+          <h2 class="subtitle">Transforma tu negocio con soluciones tecnológicas a medida</h2>
+          <p class="knowledge-paragraph">En DevXperts, ofrecemos soluciones de software personalizadas que optimizan tus procesos, mejoran la experiencia de tus usuarios y te posicionan a la vanguardia de la tecnología.</p>
+          <a href="#" class="cta">Solicita nuestros servicios</a>
       </div>
 
       <figure class="knowledge-picture">
-          <img src="./assets/img/macbook.png" alt="" class="knowledge-img"/>
+          <img src="./assets/img/desarrollo-web1.png" alt="" class="knowledge-img"/>
       </figure>
   </div>
 </section>
