--- a/src/app/components/questions/questions.component.html
+++ b/src/app/components/questions/questions.component.html
@@ -1,40 +1,77 @@
 <section class="questions container">
   <h2 class="subtitle">Preguntas frecuentes</h2>
-  <p class="questions-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, beatae?</p>
+  <p class="questions-paragraph">
+    Encuentra respuestas a las preguntas más comunes sobre nuestros servicios y
+    la forma en que trabajamos en DevXperts.
+  </p>
 
   <section class="questions-container">
-      <article class="questions-padding">
-          <div class="questions-answer">
-              <h3 class="questions-title">¿Qué es CSS?
-                  <span class="questions-arrow">
-                      <img src="./assets/img/arrow.svg" alt="" class="questions-img"/>
-                  </span>
-              </h3>
-              <p class="questions-show">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum soluta fuga animi quia hic accusamus, quaerat qui sit, error saepe quasi ipsum distinctio amet excepturi natus voluptates porro explicabo a. Aspernatur hic culpa provident voluptatem, quibusdam nulla. Dolores vel asperiores dolor exercitationem, tempore alias at, nesciunt atque recusandae explicabo ad.</p>
-          </div>
-      </article>
+    <article class="questions-padding">
+      <div class="questions-answer">
+        <h3 class="questions-title">
+          ¿Qué servicios ofrece DevXperts?
+          <span class="questions-arrow">
+            <img src="./assets/img/arrow.svg" alt="" class="questions-img" />
+          </span>
+        </h3>
+        <p class="questions-show">
+          En DevXperts nos especializamos en desarrollo web y móvil, diseño de
+          soluciones a medida, integración de sistemas, y optimización de
+          plataformas existentes. Nuestro objetivo es transformar tus ideas en
+          soluciones digitales innovadoras.
+        </p>
+      </div>
+    </article>
 
-      <article class="questions-padding">
-          <div class="questions-answer">
-              <h3 class="questions-title">¿Qué aprenderé en esté curso?
-                  <span class="questions-arrow">
-                      <img src="./assets/img/arrow.svg" alt="" class="questions-img"/>
-                  </span>
-              </h3>
-              <p class="questions-show">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum soluta fuga animi quia hic accusamus, quaerat qui sit, error saepe quasi ipsum distinctio amet excepturi natus voluptates porro explicabo a. Aspernatur hic culpa provident voluptatem, quibusdam nulla. Dolores vel asperiores dolor exercitationem, tempore alias at, nesciunt atque recusandae explicabo ad.</p>
-          </div>
-      </article>
+    <article class="questions-padding">
+      <div class="questions-answer">
+        <h3 class="questions-title">
+          ¿Qué experiencia tienen en desarrollo Full Stack?
+          <span class="questions-arrow">
+            <img src="./assets/img/arrow.svg" alt="" class="questions-img" />
+          </span>
+        </h3>
+        <p class="questions-show">
+          Somos un equipo con años de experiencia en el desarrollo de soluciones
+          Full Stack, utilizando tecnologías modernas como Angular, React,
+          Node.js, Spring Boot, MongoDB y más. Trabajamos en proyectos desde la
+          concepción hasta la implementación.
+        </p>
+      </div>
+    </article>
 
-      <article class="questions-padding">
-          <div class="questions-answer">
-              <h3 class="questions-title">¿Qué es CSS GRID?
-                  <span class="questions-arrow">
-                      <img src="./assets/img/arrow.svg" alt="" class="questions-img"/>
-                  </span>
-              </h3>
-              <p class="questions-show">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum soluta fuga animi quia hic accusamus, quaerat qui sit, error saepe quasi ipsum distinctio amet excepturi natus voluptates porro explicabo a. Aspernatur hic culpa provident voluptatem, quibusdam nulla. Dolores vel asperiores dolor exercitationem, tempore alias at, nesciunt atque recusandae explicabo ad.</p>
-          </div>
-      </article>
+    <article class="questions-padding">
+      <div class="questions-answer">
+        <h3 class="questions-title">
+          ¿Cómo manejan los proyectos personalizados?
+          <span class="questions-arrow">
+            <img src="./assets/img/arrow.svg" alt="" class="questions-img" />
+          </span>
+        </h3>
+        <p class="questions-show">
+          Cada proyecto es único. Comenzamos con una reunión para entender tus
+          necesidades, luego diseñamos un plan personalizado y lo desarrollamos
+          en etapas, manteniéndote informado durante todo el proceso. Nuestro
+          enfoque es ágil y centrado en el cliente.
+        </p>
+      </div>
+    </article>
+
+    <article class="questions-padding">
+      <div class="questions-answer">
+        <h3 class="questions-title">
+          ¿Cómo puedo ponerme en contacto con ustedes?
+          <span class="questions-arrow">
+            <img src="./assets/img/arrow.svg" alt="" class="questions-img" />
+          </span>
+        </h3>
+        <p class="questions-show">
+          Puedes contactarnos a través de nuestro formulario de contacto en la
+          página o escribirnos directamente a
+          <a href="mailto:contacto@devxperts.com">contacto&#64;devxperts.com</a>.
+          También estamos disponibles por WhatsApp y redes sociales.
+        </p>
+      </div>
+    </article>
   </section>
-
 </section>
