--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,14 +1,16 @@
 <section id="servicios" class="container about">
   <h2 class="subtitle mt-70">Nuestros Servicios</h2>
   <p class="about-paragraph">
-      Todo lo necesario y obligatorio de CSS, (Flexbox, Grid, Custom properties, Position, Animaciones, Box Model y más)
+    Soluciones tecnológicas personalizadas para llevar tu negocio al siguiente nivel.
   </p>
 
   <div class="about-main">
       <article class="about-icons">
           <img src="./assets/img/api.png" alt="" class="about-icon">
           <h3 class="about-title">API's y más</h3>
-          <p class="about-paragraph">Diseñamos e integramos API's y servicios en la nube desde cero.</p>
+          <p class="about-paragraph">
+            Desarrollamos e integramos APIs robustas y servicios en la nube según tus necesidades.
+          </p>
       </article>
 
       <article class="about-icons">
@@ -20,7 +22,9 @@
       <article class="about-icons">
           <img src="./assets/img/web.png" alt="" class="about-icon">
           <h3 class="about-title">Desarrollo web</h3>
-          <p class="about-paragraph">Realizamos sitios web tanto front-end como back-end, y web-apps para ser desplegadas en plataformas como Heroku, PythoAnywhere, Velneo, etc.</p>
+          <p class="about-paragraph">
+            Diseñamos y desarrollamos sitios web, plataformas backend y web-apps listas para producción.
+          </p>
       </article>
   </div>
 </section>
