--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="nav nav-container">
   <div class="nav-logo">
-      <h2 class="nav-title">Curso CSS</h2>
+      <h2 class="nav-title">Dev<strong>Xperts</strong></h2>
   </div>
 
   <ul class="nav-link nav-link--menu">
@@ -20,10 +20,10 @@
 <header id="inicio" class="hero">
 
   <section class="hero-container container">
-      <h1 class="hero-title">Aprende CSS3 desde CERO hasta dominarlo.</h1>
+      <h1 class="hero-title">Transforma tu negocio con soluciones tecnológicas</h1>
       <p class="hero-paragraph">
-          Elige aprender CSS de una vez por todas, una vez que termines este curso serás capaz de crear cualquier layout con CSS y crear tus propias animaciones.
+        En <strong>DevXperts</strong>, te ayudamos con desarrollo de APIs, apps móviles, sitios web y consultoría técnica. Nuestro equipo de expertos en tecnología está listo para llevar tu proyecto al siguiente nivel. ¡Tu idea, nuestra tecnología!
       </p>
-      <a href="#" class="cta">Comienza ahora</a>
+      <a href="#" class="cta">Contáctanos</a>
   </section>
 </header>
