--- a/src/app/components/price/price.component.html
+++ b/src/app/components/price/price.component.html
@@ -1,38 +1,38 @@
 <section class="price container">
-  <h2 class="subtitle">Obtén el plan perfecto para aprender</h2>
+  <h2 class="subtitle">Elige el plan ideal para tu proyecto</h2>
 
   <div class="price-table">
-      <div class="price-element">
-          <p class="price-name">Flexbox</p>
-          <h3 class="price-price">Free</h3>
-          <div class="price-items">
-              <p class="price-features">Flexbox</p>
-              <p class="price-features">Layouts</p>
-              <p class="price-features">Responsive</p>
-          </div>
-          <a href="#" class="price-cta">Empieza ahora</a>
+    <div class="price-element">
+      <p class="price-name">Plan Básico</p>
+      <h3 class="price-price">Gratis</h3>
+      <div class="price-items">
+        <p class="price-features">Consultoría inicial</p>
+        <p class="price-features">Evaluación del proyecto</p>
+        <p class="price-features">Propuesta personalizada</p>
       </div>
+      <a href="#" class="price-cta">Solicitar ahora</a>
+    </div>
 
-      <div class="price-element price-element--best">
-          <p class="price-name">Grid</p>
-          <h3 class="price-price">$30/mes</h3>
-          <div class="price-items">
-              <p class="price-features">Grid</p>
-              <p class="price-features">Implicit Grid</p>
-              <p class="price-features">Responsive</p>
-          </div>
-          <a href="#" class="price-cta">Empieza ahora</a>
+    <div class="price-element price-element--best">
+      <p class="price-name">Plan Avanzado</p>
+      <h3 class="price-price">$1,000/mes</h3>
+      <div class="price-items">
+        <p class="price-features">Diseño y desarrollo completo</p>
+        <p class="price-features">Implementación de inteligencia artificial</p>
+        <p class="price-features">Monitoreo y optimización continua</p>
       </div>
+      <a href="#" class="price-cta">Empieza ahora</a>
+    </div>
 
-      <div class="price-element">
-          <p class="price-name">Animaciones</p>
-          <h3 class="price-price">$40/mes</h3>
-          <div class="price-items">
-              <p class="price-features">Animation</p>
-              <p class="price-features">Transition</p>
-              <p class="price-features">Render Website</p>
-          </div>
-          <a href="#" class="price-cta">Empieza ahora</a>
+    <div class="price-element">
+      <p class="price-name">Plan Profesional</p>
+      <h3 class="price-price">$500/mes</h3>
+      <div class="price-items">
+        <p class="price-features">Desarrollo Full Stack</p>
+        <p class="price-features">Integraciones a medida</p>
+        <p class="price-features">Soporte técnico prioritario</p>
       </div>
+      <a href="#" class="price-cta">Empieza ahora</a>
+    </div>
   </div>
 </section>
