Modificando los textos

--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -15,7 +15,7 @@
 
       <article class="about-icons">
           <img src="./assets/img/movil.png" alt="" class="about-icon">
-          <h3 class="about-title">Desarrollo mobile</h3>
+          <h3 class="about-title">Desarrollo móvil</h3>
           <p class="about-paragraph">Desarrollamos aplicaciones nativas para dispositivos Android y próximamente para iOS.</p>
       </article>
 
