--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,7 +4,7 @@
           <h4>Nosotros</h4>
           <p>
               Somos un grupo de programadores, con conocimientos
-              en programación web, escritorio y mobile.
+              en programación web, escritorio y móvil.
           </p>
       </div>
       <div class="footer-menu">
@@ -20,7 +20,7 @@
           <ul class="list-unstyled">
               <li><a href="">Desarrollo API's</a></li>
               <li><a href="">Desarrollo Web</a></li>
-              <li><a href="">Dsesarrollo Mobile</a></li>
+              <li><a href="">Dsesarrollo Móvil</a></li>
           </ul>
       </div>
   </section>
