add section FAQ

--- a/src/app/components/questions/questions.component.html
+++ b/src/app/components/questions/questions.component.html
@@ -1,5 +1,5 @@
-<section class="questions container">
-  <h2 class="subtitle">Preguntas frecuentes</h2>
+<section id="faq" class="questions container">
+  <h2 class="subtitle mt-70">Preguntas frecuentes</h2>
   <p class="questions-paragraph">
     Encuentra respuestas a las preguntas más comunes sobre nuestros servicios y
     la forma en que trabajamos en DevXperts.
