--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -542,7 +542,7 @@ body {
     color: #fff;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    /* align-items: center; */
     border-bottom: 1px solid #fff;
     padding-bottom: 60px;
     flex-wrap: wrap;
