--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -10,9 +10,10 @@
       <div class="footer-menu">
           <h4>Menu</h4>
           <ul class="list-unstyled">
-              <li><a href="#nosotros">Nosostros</a></li>
               <li><a href="#servicios">Servicios</a></li>
+              <li><a href="#nosotros">Nosostros</a></li>
               <li><a href="#contacto">Contacto</a></li>
+              <li><a href="#faq">FAQ</a></li>
           </ul>
       </div>
       <div class="footer-services">
