--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,7 +7,7 @@
       <li class="nav-items"><a href="#inicio" class="nav-links">Inicio</a></li>
       <li class="nav-items"><a href="#servicios" class="nav-links">Servicios</a></li>
       <li class="nav-items"><a href="#nosotros" class="nav-links">Nosotros</a></li>
-      <!-- <li class="nav-items"><a href="#" class="nav-links">Proyectos</a></li> -->
+      <li class="nav-items"><a href="#faq" class="nav-links">FAQ</a></li>
       <li class="nav-items"><a href="#contacto" class="nav-link-contact">Contacto</a></li>
       <img src="./assets/img/close.svg" alt="" class="nav-close"/>
   </ul>
