add section team

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,60 +1,38 @@
-<section id="nosotros" class="container">
-  <h2 class="subtitle text-center mt-70">Sobre Nosotros</h2>
-  <p class="about-paragraph text-center">
-    Somos DevXperts, un equipo apasionado por el desarrollo de soluciones
-    tecnológicas que transforman ideas en realidades digitales.
+<section id="nosotros" class="container about">
+  <h2 class="subtitle mt-70">Sobre Nosotros</h2>
+  <p class="about-paragraph">
+    En DevXperts, somos una empresa apasionada por la tecnología y la
+    innovación. Nos especializamos en el desarrollo de soluciones digitales que
+    transforman ideas en realidades y ayudan a nuestros clientes a alcanzar sus
+    metas.
   </p>
-  <div class="testimony">
-    <div class="testimony-container container">
-      <img
-        src="./assets/img/leftarrow.svg"
-        alt=""
-        class="testimony-arrow"
-        id="before"
-      />
 
-      <section class="testimony-body testimony-body--show" data-id="1">
-        <div class="testimony-texts">
-          <h2 class="subtitle">
-            Soy Jordan Alexander,
-            <span class="testimony-course">Desarrollador Fullstack.</span>
-          </h2>
-          <p class="testimony-review">
-            Desarrollador Fullstack apasionado por crear soluciones tecnológicas
-            que marquen la diferencia. Con más de 5 años de experiencia en el
-            desarrollo de aplicaciones web y móviles, domina tecnologías como
-            JavaScript, Node.js, Angular y bases de datos SQL y NoSQL
-          </p>
-        </div>
-        <figure class="testimony-picture">
-          <img src="./assets/img/face3.jpg" alt="" class="testimony-img" />
-        </figure>
-      </section>
+  <div class="about-main">
+    <article class="about-icons border">
+      <!-- <img src="./assets/img/api.png" alt="" class="about-icon" /> -->
+      <h3 class="about-title">Misión</h3>
+      <p class="about-paragraph">
+        Crear productos tecnológicos innovadores que impacten positivamente la
+        vida de las personas, combinando calidad, eficiencia y facilidad de uso.
+      </p>
+    </article>
 
-      <section class="testimony-body" data-id="2">
-        <div class="testimony-texts">
-          <h2 class="subtitle">
-            Soy Juan Carlos,
-            <span class="testimony-course">Desarrollador Backend</span>
-          </h2>
-          <p class="testimony-review">
-            Experto en desarrollo Fullstack con una amplia trayectoria en
-            proyectos tecnológicos innovadores. Con una sólida base en
-            tecnologías como Python, Django, Flask y DevOps, es capaz de liderar
-            proyectos de principio a fin.
-          </p>
-        </div>
-        <figure class="testimony-picture">
-          <img src="./assets/img/face4.jpg" alt="" class="testimony-img" />
-        </figure>
-      </section>
+    <article class="about-icons border">
+      <!-- <img src="./assets/img/movil.png" alt="" class="about-icon" /> -->
+      <h3 class="about-title">Visión</h3>
+      <p class="about-paragraph">
+        Convertirnos en líderes en el desarrollo de soluciones digitales
+        personalizadas, reconocidos por nuestro enfoque centrado en el cliente y
+        nuestro compromiso con la excelencia.
+      </p>
+    </article>
 
-      <img
-        src="./assets/img/rightarrow.svg"
-        alt=""
-        class="testimony-arrow"
-        id="next"
-      />
-    </div>
+    <article class="about-icons border">
+      <!-- <img src="./assets/img/web.png" alt="" class="about-icon" /> -->
+      <h3 class="about-title">Valores</h3>
+      <p class="about-paragraph">
+        Nos enfocamos en la innovación constante, el compromiso con la excelencia, la entrega de productos de alta calidad y la colaboración efectiva con nuestros clientes para superar sus expectativas.
+      </p>
+    </article>
   </div>
 </section>
