--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,10 @@
     <app-knowledge></app-knowledge>
 
     <app-price></app-price>
-
+    
     <app-about></app-about>
+    
+    <app-team></app-team>
     
     <app-contact></app-contact>
     
