--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,2 @@
-<app-header></app-header>
+<router-outlet></router-outlet>
 
-<main>
-    <app-services></app-services>
-
-    <app-knowledge></app-knowledge>
-
-    <app-price></app-price>
-    
-    <app-about></app-about>
-    
-    <app-team></app-team>
-    
-    <app-contact></app-contact>
-    
-    <app-questions></app-questions>
-</main>
-
-<app-whats></app-whats>
-
-<app-footer></app-footer>
