--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,37 +1,53 @@
 <footer class="footer">
   <section class="footer-container container">
-      <div class="footer-about">
-          <h4>Nosotros</h4>
-          <p>
-              Somos un grupo de programadores, con conocimientos
-              en programación web, escritorio y móvil.
-          </p>
-      </div>
-      <div class="footer-menu">
-          <h4>Menu</h4>
-          <ul class="list-unstyled">
-              <li><a href="#servicios">Servicios</a></li>
-              <li><a href="#nosotros">Nosostros</a></li>
-              <li><a href="#contacto">Contacto</a></li>
-              <li><a href="#faq">FAQ</a></li>
-          </ul>
-      </div>
-      <div class="footer-services">
-          <h4>Servicios</h4>
-          <ul class="list-unstyled">
-              <li><a href="">Desarrollo API's</a></li>
-              <li><a href="">Desarrollo Web</a></li>
-              <li><a href="">Dsesarrollo Móvil</a></li>
-          </ul>
-      </div>
+    <div class="footer-about">
+      <h4>Nosotros</h4>
+      <p>
+        Somos un grupo de programadores, con conocimientos en programación web,
+        escritorio y móvil.
+      </p>
+    </div>
+    <div class="footer-menu">
+      <h4>Menu</h4>
+      <ul class="list-unstyled">
+        <li><a href="#servicios">Servicios</a></li>
+        <li><a href="#nosotros">Nosostros</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+        <li><a href="#faq">FAQ</a></li>
+      </ul>
+    </div>
+    <div class="footer-services">
+      <h4>Servicios</h4>
+      <ul class="list-unstyled">
+        <li><a href="">Desarrollo API's</a></li>
+        <li><a href="">Desarrollo Web</a></li>
+        <li><a href="">Dsesarrollo Móvil</a></li>
+      </ul>
+    </div>
   </section>
 
   <section class="footer-copy container">
-      <div class="footer-social">
-          <a href="#" class="footer-icons"><img src="./assets/img/facebook.svg" alt="" class="footer-img"/></a>
-          <a href="#" class="footer-icons"><img src="./assets/img/twitter.svg" alt="" class="footer-img"/></a>
-          <a href="#" class="footer-icons"><img src="./assets/img/youtube.svg" alt="" class="footer-img"/></a>
-      </div>
-      <h3 class="footer-copyright">&copy; 2024 - Todos los derechos reservados </h3>
+    <div class="footer-social">
+      <a href="#" class="footer-icons"
+        ><img src="./assets/img/facebook.svg" alt="" class="footer-img"
+      /></a>
+      <a href="#" class="footer-icons"
+        ><img src="./assets/img/twitter.svg" alt="" class="footer-img"
+      /></a>
+      <a href="#" class="footer-icons"
+        ><img src="./assets/img/youtube.svg" alt="" class="footer-img"
+      /></a>
+    </div>
+    <div class="footer-links">
+      <a routerLink="/terminos-y-condiciones" class="footer-link"
+        >Términos y Condiciones</a
+      >
+      <a routerLink="/politicas-de-privacidad" class="footer-link"
+        >Políticas de Privacidad</a
+      >
+    </div>
+    <h3 class="footer-copyright">
+      &copy; 2024 - Todos los derechos reservados
+    </h3>
   </section>
 </footer>
