--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -16,22 +16,39 @@
       <section class="testimony-body testimony-body--show" data-id="1">
         <div class="testimony-texts">
           <h2 class="subtitle">
-            Soy Benjamin Condori Vasquez,
+            Soy Carlos Andres Vargas Muyuro,
             <span class="testimony-course">Desarrollador Fullstack.</span>
           </h2>
           <p class="testimony-review">
             Desarrollador Fullstack apasionado por crear soluciones tecnológicas
-            que marquen la diferencia. Con más de 5 años de experiencia en el
+            que marquen la diferencia. Con más de 2 años de experiencia en el
             desarrollo de aplicaciones web y móviles, domina tecnologías como
             JavaScript, Node.js, Angular y bases de datos SQL y NoSQL
           </p>
         </div>
         <figure class="testimony-picture">
-          <img src="./assets/img/face3.jpg" alt="" class="testimony-img" />
+          <style>
+            .testimony-picture {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              height: 100%;
+            }
+            .testimony-img {
+              width: 100%;
+              max-height: 250px;
+              max-width: 250px;
+              height: auto;
+              border-radius: 50%;
+              object-fit: contain;
+              box-shadow: 0 4px 16px rgba(0,0,0,0.12);
+            }
+          </style>
+          <img src="./assets/img/foto1-p.jpg" alt="" class="testimony-img" />
         </figure>
       </section>
 
-      <section class="testimony-body" data-id="2">
+      <!-- <section class="testimony-body" data-id="2">
         <div class="testimony-texts">
           <h2 class="subtitle">
             Soy Carlos Andres Vargas Muyuro,
@@ -47,7 +64,7 @@
         <figure class="testimony-picture">
           <img src="./assets/img/face4.jpg" alt="" class="testimony-img" />
         </figure>
-      </section>
+      </section> -->
 
       <img
         src="./assets/img/rightarrow.svg"
