add chat bot completed

--- a/src/app/components/politicas/politicas.component.html
+++ b/src/app/components/politicas/politicas.component.html
@@ -83,9 +83,9 @@
     información, puede contactarnos a través de los siguientes medios:
   </p>
   <ul>
-    <li><strong>Correo electrónico:</strong> contacto&#64;devxperts.com</li>
+    <li><strong>Correo electrónico:</strong> vargascarlos2170&#64;gmail.com</li>
     <li><strong>Teléfono:</strong> +591 60026802</li>
-    <li><strong>Dirección:</strong> Av. Santa Cruz #162 entre Calle Santiago Charcas</li>
+    <li><strong>Dirección:</strong> Av. Beni entre 5to y 60 anillo</li>
   </ul>
 
   <p>
